--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "caffeinated/shinobi": "^5.0",
         "fideloper/proxy": "^4.0",
         "laravel/framework": "^6.2",
+        "laravel/scout": "^8.0",
         "laravel/tinker": "^2.0",
         "laravel/ui": "^1.2",
         "maatwebsite/excel": "^3.1"
