--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
     "license": "MIT",
     "require": {
         "php": "^7.2",
+        "algolia/algoliasearch-client-php": "^2.6",
         "barryvdh/laravel-dompdf": "^0.8.6",
         "caffeinated/shinobi": "^5.0",
         "fideloper/proxy": "^4.0",
